// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card Card with image renders as expected 1`] = `
<a
  className="dr-ui--card color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
  href="url"
>
  <div
    className="relative h120 mb6"
  >
    <div
      className="relative h120 mb12"
      style={
        Object {
          "backgroundImage": "url('../files/simple-map.png')",
          "backgroundPosition": "center",
          "backgroundSize": "100% auto",
        }
      }
    />
  </div>
  <div>
    <div
      className="flex mb6 txt-bold color-gray txt-s"
    >
      <div
        className="mr12"
      >
        <div
          className="dr-ui--level-indicator flex flex--center-cross"
        >
          <div
            className="w6 bg-orange flex-child-no-shrink mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="w6 bg-orange flex-child-no-shrink mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="w6 bg-orange-light flex-child-no-shrink mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="color-gray ml3"
          >
            Intermediate
          </div>
        </div>
      </div>
      <span
        className="flex-parent flex-parent--center-cross"
      >
        <span
          className="flex-child mr3"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 18,
                "width": 18,
              }
            }
          >
            <use
              xlinkHref="#icon-code"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </span>
        <span
          className="flex-child"
        >
          JavaScript
        </span>
      </span>
    </div>
    <div
      className="mb6"
    >
      My cool card
    </div>
    <div
      className="color-gray color-gray-on-hover"
    >
      This card is very cool.
    </div>
  </div>
</a>
`;

exports[`card Card with no image renders as expected 1`] = `
<a
  className="dr-ui--card color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
  href="url"
>
  <div>
    <div
      className="flex mb6 txt-bold color-gray txt-s"
    >
      <div
        className="mr12"
      >
        <div
          className="dr-ui--level-indicator flex flex--center-cross"
        >
          <div
            className="w6 bg-orange flex-child-no-shrink mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="w6 bg-orange flex-child-no-shrink mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="w6 bg-orange-light flex-child-no-shrink mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="color-gray ml3"
          >
            Intermediate
          </div>
        </div>
      </div>
      <span
        className="flex-parent flex-parent--center-cross"
      >
        <span
          className="flex-child mr3"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 18,
                "width": 18,
              }
            }
          >
            <use
              xlinkHref="#icon-code"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </span>
        <span
          className="flex-child"
        >
          JavaScript
        </span>
      </span>
    </div>
    <div
      className="mb6"
    >
      My cool card
    </div>
    <div
      className="color-gray color-gray-on-hover"
    >
      This card is still cool despite not having a thumbnail.
    </div>
  </div>
</a>
`;

exports[`card Card without description renders as expected 1`] = `
<a
  className="dr-ui--card color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
  href="url"
>
  <div
    className="relative h120 mb6"
  >
    <div
      className="relative h120 mb12"
      style={
        Object {
          "backgroundImage": "url('../files/simple-map.png')",
          "backgroundPosition": "center",
          "backgroundSize": "100% auto",
        }
      }
    />
  </div>
  <div>
    <div
      className="flex mb6 txt-bold color-gray txt-s"
    >
      <div
        className="mr12"
      >
        <div
          className="dr-ui--level-indicator flex flex--center-cross"
        >
          <div
            className="w6 bg-orange flex-child-no-shrink mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="w6 bg-orange flex-child-no-shrink mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="w6 bg-orange-light flex-child-no-shrink mr3"
            style={
              Object {
                "borderRadius": "1px",
                "height": "8px",
              }
            }
          />
          <div
            className="color-gray ml3"
          >
            Intermediate
          </div>
        </div>
      </div>
      <span
        className="flex-parent flex-parent--center-cross"
      >
        <span
          className="flex-child mr3"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 18,
                "width": 18,
              }
            }
          >
            <use
              xlinkHref="#icon-code"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </span>
        <span
          className="flex-child"
        >
          JavaScript
        </span>
      </span>
    </div>
    <div
      className="mb6"
    >
      My cool card without a description
    </div>
  </div>
</a>
`;
